--- a/snack1/index.html
+++ b/snack1/index.html
@@ -7,8 +7,7 @@
     <title>snack1</title>
 </head>
 <body>
-    <h1 id="nome"></h1>
-    <h2 id="peso"></h2>
+    <div id="container"></div>
     <script src="js/script.js"></script>
 </body>
 </html>
